--- a/templates/components/_footer.html.twig
+++ b/templates/components/_footer.html.twig
@@ -7,7 +7,7 @@
             <div class="col-md-4  col-sm-4 col-xs-12">
                 <div class="about">
                     <a href="#" class="logo">
-                        <img alt="" src="assets/images/logo_footer.png" />
+                        <img alt="" src="{{ asset('assets/images/logo_footer.png') }}" />
                     </a>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form</p>
                 </div>
