--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -2,22 +2,22 @@
 
 {% block stylesheets %}
     <!-- Favicons -->
-    <link rel="shortcut icon" href="assets/images/favicon.png">
-    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="{{ asset('assets/images/favicon.png') }}">
+    <link rel="apple-touch-icon" href="{{ asset('assets/images/apple-touch-icon-57x57.png') }}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('assets/images/apple-touch-icon-72x72.png') }}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('assets/images/apple-touch-icon-114x114.png') }}">
     <!-- Online Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,700&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
     <!-- Vender -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="assets/css/normalize.min.css" rel="stylesheet"/>
-    <link href="assets/css/owl.carousel.min.css" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/font-awesome.min.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/normalize.min.css') }}" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/owl.carousel.min.css') }}" rel="stylesheet"/>
     <!-- Main CSS (SCSS Compile) -->
-    <link href="assets/css/main.css" rel="stylesheet"/>
+    <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet"/>
     <!-- JavaScripts -->
     <!--<script src="js/modernizr.js"></script>-->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -44,8 +44,8 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="{{ asset('assets/js/jquery.min.js') }}"></script>
+    <script src="{{ asset('assets/js/bootstrap.js') }}"></script>
+    <script src="{{ asset('assets/js/owl.carousel.min.js') }}"></script>
+    <script src="{{ asset('assets/js/main.js') }}"></script>
 {% endblock %}
